cmd/account-gateway/k8s/02-account-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-gateway
  namespace: kube-system
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: account-gateway
  template:
    metadata:
      labels:
        app: account-gateway
    spec:
      containers:
        - name: account-gateway
          image: uhub.service.ucloud.cn/entropypool/account-gateway:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: service-config
              mountPath: /etc/AccountGateway
      volumes:
        - name: service-config
          configMap:
            name: account-gateway-config
            items:
              - key: service-conf
                path: AccountGateway.viper.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: account-gateway
  namespace: kube-system
spec:
  ports:
    - name: http
      port: 50480
      targetPort: 50480
    - name: grpc
      port: 50481
      targetPort: 50481
    - name: healthz
      port: 50482
      targetPort: 50482
    - name: prometheus
      port: 50483
      targetPort: 50483
  selector:
    app: account-gateway
