cmd/account-gateway/k8s/04-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: account-gateway-traefik-app-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: account-gateway-traefik-app
    k8s.kuboard.cn/workload: account-gateway-traefik-app
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-strip-account-gateway-prefix@kubernetescrd,
      kube-system-common-headers@kubernetescrd,
      kube-system-headers-appid-to-body@kubernetescrd,
      kube-system-headers-userid-to-body@kubernetescrd,
      kube-system-headers-app-login-token-to-body@kubernetescrd,
      kube-system-app-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/account/v1/version
            backend:
              serviceName: account-gateway
              servicePort: 50480
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules
    - host: api.ohhash.com
      http: *http_rules
    - host: api.procyon.npool.top
      http: *http_rules
    - host: api.procyon.xpool.top
      http: *http_rules
    - host: api.lpsecretbase.com
      http: *http_rules

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: account-gateway-traefik-app-user-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: account-gateway-traefik-app-user
    k8s.kuboard.cn/workload: account-gateway-traefik-app-user
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-strip-account-gateway-prefix@kubernetescrd,
      kube-system-common-headers@kubernetescrd,
      kube-system-headers-appid-to-body@kubernetescrd,
      kube-system-headers-userid-to-body@kubernetescrd,
      kube-system-headers-app-login-token-to-body@kubernetescrd,
      kube-system-app-user-role-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/account/v1/create
            backend:
              serviceName: account-gateway
              servicePort: 50480
          - path: /api/account/v1/get
            backend:
              serviceName: account-gateway
              servicePort: 50480
          - path: /api/account/v1/create/transfer
            backend:
              serviceName: account-gateway
              servicePort: 50480
          - path: /api/account/v1/delete/transfer
            backend:
              serviceName: account-gateway
              servicePort: 50480
          - path: /api/account/v1/get/transfers
            backend:
              serviceName: account-gateway
              servicePort: 50480
          - path: /api/account/v1/get/app/transfers
            backend:
              serviceName: account-gateway
              servicePort: 50480
          - path: /api/account/v1/get/napp/transfers
            backend:
              serviceName: account-gateway
              servicePort: 50480
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules
    - host: api.ohhash.com
      http: *http_rules
    - host: api.procyon.npool.top
      http: *http_rules
    - host: api.procyon.xpool.top
      http: *http_rules
    - host: api.lpsecretbase.com
      http: *http_rules
